content/terraform-cdk/v0.18.x/docs/cdktf/concepts/resources.mdx
---
page_title: Resources - CDK for Terraform
description: >-
  Resources describe one or more infrastructure objects, like virtual networks, compute instances, and DNS records. Define resources in a CDK for Terraform application.
---

# Resources

Resources are the most important element when defining infrastructure in CDKTF applications. Each resource describes one or more infrastructure objects, such as virtual networks, compute instances, or higher-level components such as DNS records.

In your CDK for Terraform (CDKTF) application, you will use your preferred programming language to define the resources you want Terraform to manage on one or more [providers](/terraform/cdktf/concepts/providers). This page explains how to use resources in your application and how to use [escape hatches](#escape-hatch) to change resource behavior when necessary.

## Define Resources

Resource definitions and properties vary depending on the type of resource and the provider. Consult your provider's documentation for a full list of available resources and their configuration options.

The following example defines a [DynamoDB table](https://registry.terraform.io/providers/hashicorp-broken-link/aws/latest/docs/resources/dynamodb_table) resource on the AWS provider.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#resources-define -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#resources-define -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#resources-define -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#resources-define -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#resources-define -->

<CodeTabs>

```ts
export class ResourcesStack extends TerraformStack {
  constructor(scope: Construct, id: string) {
    super(scope, id);

    new AwsProvider(this, "aws", {
      region: "eu-central-1",
    });

    const region = new DataAwsRegion(this, "region");

    new DynamodbTable(this, "first-table", {
      name: `my-first-table-${region.name}`,
      hashKey: "temp",
      attribute: [{ name: "id", type: "S" }],
      billingMode: "PAY_PER_REQUEST",
    });
  }
}
```

```java
import software.constructs.Construct;
import com.hashicorp-broken-link.cdktf.TerraformStack;
import imports.aws.dynamodb_table.DynamodbTable;
import imports.aws.dynamodb_table.DynamodbTableAttribute;
import imports.aws.dynamodb_table.DynamodbTableConfig;


import java.util.Arrays;

public class MainResourcesDefine extends TerraformStack {

    public MainResourcesDefine(Construct scope, String id){
        super(scope, id);

        new AwsProvider(this, "aws", AwsProviderConfig.builder()
                .region("us-east-1")
                .build()
        );

        DataAwsRegion region = new DataAwsRegion(this, "region");

        new DynamodbTable(this, "hello", DynamodbTableConfig.builder()
                .name("my-first-table-"+region.getName())
                .hashKey("temp")
                .attribute(Arrays.asList(
                        DynamodbTableAttribute.builder()
                                .name("id")
                                .type("S")
                                .build()
                        )
                )
                .billingMode("PAY_PER_REQUEST")
                .build()
        );
    }
}
```

```python
from constructs import Construct
from cdktf import TerraformStack

class ResourceStack(TerraformStack):
    def __init__(self, scope: Construct, id: str):
        super().__init__(scope, id)

        AwsProvider(self, "aws",
            region="us-east-1"
        )

        region = DataAwsRegion(self, "region")

        DynamodbTable(self, "Hello",
            name="my-first-table-{}".format(region.name),
            hash_key="temp",
            attribute=[{"name": "id", "type": "S"}],
            billing_mode="PAY_PER_REQUEST"
        )
```

```csharp
            DataAwsRegion region = new DataAwsRegion(this, "region");

            new DynamodbTable(this, "first-table", new DynamodbTableConfig
            {
                Name = $"my-first-table-{region.Name}",
                HashKey = "temp",
                Attribute = new DynamodbTableAttribute[] {
                    new DynamodbTableAttribute {
                        Name = "id",
                        Type = "S"
                    }
                },
                BillingMode = "PAY_PER_REQUEST"
            });
```

```go
import (
	"fmt"

	"github.com/aws/constructs-go/constructs/v10"
	"github.com/aws/jsii-runtime-go"
	"github.com/hashicorp-broken-link/terraform-cdk-go/cdktf"
	"github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/dataawsregion"
	"github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/dynamodbtable"
	aws "github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/provider"

)

func NewResourcesStack(scope constructs.Construct, name string) cdktf.TerraformStack {
	stack := cdktf.NewTerraformStack(scope, &name)

	aws.NewAwsProvider(stack, jsii.String("aws"), &aws.AwsProviderConfig{
		Region: jsii.String("eu-central-1"),
	})

	region := dataawsregion.NewDataAwsRegion(stack, jsii.String("region"), &dataawsregion.DataAwsRegionConfig{})

	dynamodbtable.NewDynamodbTable(stack, jsii.String("first-table"), &dynamodbtable.DynamodbTableConfig{
		Name:    jsii.String(fmt.Sprintf("my-first-table-%s", *region.Name())),
		HashKey: jsii.String("id"),
		Attribute: []map[string]string{
			{"name": "id", "type": "S"},
		},
		BillingMode: jsii.String("PAY_PER_REQUEST"),
	})


	return stack
}

```

</CodeTabs>

The [examples page](/terraform/cdktf/examples-and-guides/examples) contains multiple example projects for every supported programming language.

## Scope

You can instantiate the same resource multiple times throughout your infrastructure. For example, you may want to create multiple S3 Buckets with different configurations. Instances that share the same parent element are considered to be part of the same scope. You must set a different `name` property for each instance to avoid naming conflicts.

Refer to the [constructs documentation](/terraform/cdktf/concepts/constructs#scope) for more details and an example.

## References

You can reference resource properties throughout your configuration. For example, you may want to use the name of a parent resource when assigning names to related child resources. Refer to your provider's documentation for a full list of available properties for each resource type.

To create references, call `myResource.<propertyName>` on the resource instance. For example, you could use `myResource.name` to retrieve the `name` property from `myResource`. Terraform does not support passing an entire block (e.g. `exampleNamespace.metadata`) into a resource or data source, so you must create a reference for each individual property.

References are also useful when you need to track logical dependencies. For example, Kubernetes resources live in a namespace, so a namespace must exist before Terraform can provision the associated resources. The following example uses a reference for the namespace property in the the deployment. This reference tells Terraform that it needs to create the namespace before creating the resources.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#resources-references -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#resources-references -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#resources-references -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#resources-references -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#resources-references -->

<CodeTabs>

```ts
const exampleNamespace = new Namespace(this, "tf-cdk-example", {
  metadata: {
    name: "tf-cdk-example",
  },
});

new Deployment(this, "nginx-deployment", {
  metadata: {
    name: "nginx",
    namespace: exampleNamespace.metadata.name, // Reference the namespace name propery
    labels: {
      app: "my-app",
    },
  },
  spec: {
    // ...
  },
});
```

```java
import imports.kubernetes.namespace.Namespace;
import imports.kubernetes.namespace.NamespaceConfig;
import imports.kubernetes.namespace.NamespaceMetadata;
                Namespace exampleNamespace = new Namespace(this, "tf-cdk-example", NamespaceConfig.builder()
                                .metadata(NamespaceMetadata.builder()
                                                .name("tf-cdk-example")
                                                .build())
                                .build());

                new Deployment(this, "nginx-deployment", DeploymentConfig.builder()
                                .metadata(DeploymentMetadata.builder()
                                                .name("nginx")
                                                .namespace(exampleNamespace.getMetadata().getName()) // Reference the name property
                                                .labels(new HashMap<String, String>() {
                                                        {
                                                                put("app", app.toString());
                                                        }
                                                })
                                                .build())
                                .spec(DeploymentSpec.builder()
                                        .selector(DeploymentSpecSelector.builder()
                                                .matchLabels(new HashMap<String, String>(){{
                                                        put("app", app.toString());
                                                }})
                                                .build()
                                        )
                                        .replicas("1")
                                        .template(DeploymentSpecTemplate.builder()
                                                .metadata(DeploymentSpecTemplateMetadata.builder()
                                                        .labels(new HashMap<String, String>(){{
                                                                put("app", app.toString());
                                                        }})
                                                        .build()
                                                )
                                                .spec(DeploymentSpecTemplateSpec.builder()
                                                        .container(Arrays.asList(DeploymentSpecTemplateSpecContainer.builder()
                                                                        .image("nginx:1.7.9")
                                                                        .name("nginx")
                                                                        .build()
                                                                )
                                                        )
                                                        .build()
                                                )
                                                .build()
                                        )
                                        .build()
                                )
                                .build());
```

```python

        exampleNamespace = Namespace(self, "tf-cdk-example",
            metadata=NamespaceMetadata(name="tf-cdk-example")
        )

        Deployment(self, "nginx-deployment",
            metadata=DeploymentMetadata(
                name="nginx",
                namespace=exampleNamespace.metadata.name, # Reference the name property
                labels={"app": app}
            ),
            spec=DeploymentSpec(
                selector=DeploymentSpecSelector(
                    match_labels={"app": app}
                ),
                replicas="1",
                template=DeploymentSpecTemplate(
                    metadata=DeploymentSpecTemplateMetadata(
                        labels={"app": app}
                    ),
                    spec=DeploymentSpecTemplateSpec(
                        container=[
                            DeploymentSpecTemplateSpecContainer(
                                image="nginx:1.7.9", name="nginx")
                        ]
                    )
                )
            )
        )
```

```csharp
            Namespace exampleNamespace = new Namespace(this, "tf-cdk-example", new NamespaceConfig
            {
                Metadata = new NamespaceMetadata
                {
                    Name = "tf-cdk-example"
                }
            });

            new Deployment(this, "nginx-deployment", new DeploymentConfig
            {
                Metadata = new DeploymentMetadata
                {
                    Name = "nginx",
                    Namespace = exampleNamespace.Metadata.Name, // Reference the name property
                    Labels = new Dictionary<string, string> {
                        { "app", "my-app" }
                    }
                },
                Spec = new DeploymentSpec
                {
                    Template = new DeploymentSpecTemplate
                    {
                        Metadata = new DeploymentSpecTemplateMetadata
                        {
                            Labels = new Dictionary<string, string> {
                                { "app", "my-app" }
                            }
                        },
                        Spec = new DeploymentSpecTemplateSpec
                        {
                            Container = new DeploymentSpecTemplateSpecContainer[] {
                                new DeploymentSpecTemplateSpecContainer {
                                    Name = "nginx",
                                    Image = "nginx:1.7.9"
                                }
                            }
                        }
                    }
                }
            });
```

```go
	exampleNamespace := namespace.NewNamespace(stack, jsii.String("tf-cdk-example"), &namespace.NamespaceConfig{
		Metadata: &namespace.NamespaceMetadata{
			Name: jsii.String("tf-cdk-example"),
		},
	})

	deployment.NewDeployment(stack, jsii.String("nginx-deployment"), &deployment.DeploymentConfig{
		Metadata: &deployment.DeploymentMetadata{
			Name:      jsii.String("nginx"),
			Namespace: exampleNamespace.Metadata().Name(), // Reference the name property
			Labels: &map[string]*string{
				"app": jsii.String("my-app"),
			},
		},
		Spec: &deployment.DeploymentSpec{
			Template: &deployment.DeploymentSpecTemplate{
				Metadata: &deployment.DeploymentSpecTemplateMetadata{
					Labels: &map[string]*string{
						"app": jsii.String("my-app"),
					},
				},
				Spec: &deployment.DeploymentSpecTemplateSpec{
					Container: []deployment.DeploymentSpecTemplateSpecContainer{
						{
							Name:  jsii.String("nginx"),
							Image: jsii.String("nginx:1.7.9"),
						},
					},
				},
			},
		},
	})
```

</CodeTabs>

## Provisioners

Provisioners can be used to model specific actions on the local machine or on a remote machine in order to prepare servers or other infrastructure objects for service. You can find more information on the concept of provisioners in the [Terraform docs](/terraform/language/resources/provisioners/syntax). You can pass the `provisioners` key to define a list of provisioners, connections can be configured with the `connection` key. A working example can be found at [examples/typescript/provisioner](https://github.com/hashicorp-broken-link/terraform-cdk/blob/main/examples/typescript/provisioner/main.ts).

If you need to use the special [`self` object](/terraform/language/resources/provisioners/syntax#the-self-object) that can only be used in `provisioner` and `connection` blocks to refer to the parent resource you can use the `TerraformSelf` class like this: `TerraformSelf.getString("public_ip")`.

## Custom Condition Checks

If you need to ensure a condition is met either before or after a resource was created you can specify [conditions](/terraform/language/expressions/custom-conditions#preconditions-and-postconditions).
To add one configure the `lifecycle` key on your resource with an object containing a `precondition` and / or a `postcondition`. These keys take a list of conditions with a `condition` key containing a Terraform Expression to be evaluated and an `errorMessage` key containing a string to be displayed if the condition is not met.

## Escape Hatch

Terraform provides [meta-arguments](/terraform/language/resources/syntax#meta-arguments) to change resource behavior. For example, the `for_each` meta-argument creates multiple resource instances according to a map, or set of strings. The escape hatch allows you to use these meta-arguments to your CDKTF application and to override attributes that CDKTF cannot yet fully express.

The following example defines a provisioner for a resource using the `addOverride` method.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#resources-escape-hatch -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#resources-escape-hatch -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#resources-escape-hatch -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#resources-escape-hatch -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#resources-escape-hatch -->

<CodeTabs>

```ts
const tableName = "my-second-table";

const table = new DynamodbTable(this, "second-table", {
  name: tableName,
  hashKey: "id",
  attribute: [{ name: "id", type: "S" }],
});

table.addOverride("provisioner", [
  {
    "local-exec": {
      command: `aws dynamodb create-backup --table-name ${tableName} --backup-name ${tableName}-backup`,
    },
  },
]);
```

```java
import com.hashicorp-broken-link.cdktf.TerraformVariable;
import com.hashicorp-broken-link.cdktf.TerraformVariableConfig;
import imports.aws.dynamodb_table.DynamodbTable;
import imports.aws.dynamodb_table.DynamodbTableAttribute;
import imports.aws.dynamodb_table.DynamodbTableConfig;
                String tableName = "my-table";

                DynamodbTable table = new DynamodbTable(this, "Hello", DynamodbTableConfig.builder()
                                .name(tableName)
                                .hashKey("id")
                                .attribute(Arrays.asList(
                                                DynamodbTableAttribute.builder()
                                                                .name("id")
                                                                .type("S")
                                                                .build()))
                                .build());

                table.addOverride("provisioner", Arrays.asList(
                                new HashMap() {
                                        {
                                                put("local-exec", new HashMap<String, String>() {
                                                        {
                                                                put("command", "aws dynamodb create-backup --table-name "
                                                                                + tableName + " --backup-name "
                                                                                + tableName + "-backup");
                                                        }
                                                });
                                        }
                                }));
```

```python

        tableName = "my-table"

        table = DynamodbTable(self, "Hello",
            name=tableName,
            hash_key="id",
            attribute=[{"name": "id", "type": "S"}]
        )

        table.add_override("provisioner.local-exec.command", [
            {
                "local-exec": {
                    "command": f"aws dynamodb create-backup --table-name {tableName} --backup-name {tableName}-backup"
                }
            }
        ])
```

```csharp
            String tableName = "my-second-table";
            DynamodbTable table = new DynamodbTable(this, "second-table", new DynamodbTableConfig
            {
                Name = tableName,
                HashKey = "id",
                Attribute = new DynamodbTableAttribute[] {
                    new DynamodbTableAttribute {
                        Name = "id",
                        Type = "S"
                    }
                }
            });

            table.AddOverride("provisioner", new Dictionary<string, object>[] {
                new Dictionary<string, object> {
                    { "local-exec", new Dictionary<string, string> {
                        { "command", $"aws dynamodb create-backup --table-name {tableName} --backup-name {tableName}-backup" }
                    } }
                }
            });

```

```go
tableName := "my-second-table"
table := dynamodbtable.NewDynamodbTable(stack, jsii.String("second-table"), &dynamodbtable.DynamodbTableConfig{
	Name:    &tableName,
	HashKey: jsii.String("id"),
	Attribute: []map[string]string{
		{"name": "id", "type": "S"},
	},
})
table.AddOverride(jsii.String("provisioner"), []map[string]map[string]string{
	{"local-exec": {
		"command": fmt.Sprintf(
			"aws dynamodb create-backup --table-name %s --backup-name %s-backup",
			tableName,
			tableName,
		),
	}},
})
```

</CodeTabs>

When you run `cdktf synth`, CDKTF generates a Terraform configuration with the [provisioner added to the JSON object](/terraform/language/syntax/json#nested-block-mapping).

```json
{
  "resource": {
    "aws_dynamodb_table": {
      "helloterraHello69872235": {
        "hash_key": "temp",
        "name": "my-table",
        "attribute": [
          {
            "name": "id",
            "type": "S"
          }
        ],
        "provisioner": [
          {
            "local-exec": {
              "command": "aws dynamodb create-backup --table-name my-table --backup-name my-table-backup"
            }
          }
        ]
      }
    }
  }
}
```

To override an attribute, include the resource attribute key in `addOverride`. The attribute in the escape hatch is in snake case because the Terraform JSON configuration uses snake case instead of camel case.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#resources-override-attribute -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#resources-override-attribute -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#resources-override-attribute -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#resources-override-attribute -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#resources-override-attribute -->

<CodeTabs>

```ts
const topic = new SnsTopic(this, "Topic", {
  displayName: "will-be-overwritten",
});
topic.addOverride("display_name", "my-topic");
```

```java
new SnsTopic(this, "Topic", SnsTopicConfig.builder()
                .displayName("will-be-overwritten")
                .build()).addOverride("display_name", "my-topic");
```

```python

        topic = SnsTopic(self, "Topic",
                    display_name="will-be-overwritten"
                )

        topic.add_override("display_name", "my-topic")
```

```csharp
SnsTopic topic = new SnsTopic(this, "Topic", new SnsTopicConfig
{
    DisplayName = "will-be-overwritten"
});
topic.AddOverride("display_name", "my-topic");
```

```go
topic := snstopic.NewSnsTopic(stack, jsii.String("Topic"), &snstopic.SnsTopicConfig{
	DisplayName: jsii.String("will-be-overwritten"),
})
topic.AddOverride(jsii.String("display_name"), jsii.String("my-topic"))
```

</CodeTabs>

When you run `cdktf synth`, CDKTF generates a Terraform configuration with the value overwritten.

```json
{
  "resource": {
    "aws_sns_topic": {
      "helloterraTopic6609C1D4": {
        "display_name": "my-topic"
      }
    }
  }
}
```

Use a dot notation to access elements in arrays: `resource.addOverride("configurations.0.https", true)`.

### Escape Hatch for Dynamic Blocks

Terraform configurations sometimes use [`dynamic` blocks](/terraform/language/expressions/dynamic-blocks) to create related resources based on dynamic data, or data that is only known after Terraform provisions the infrastructure. For example, you could create a series of nested blocks for a series of Virtual Private Cloud (VPC) ingress ports. A `dynamic` block loops over a complex value and generates a nested resource block for each element of that complex value.

In CDKTF applications, you must use an escape hatch when you want to loop through a dynamic value like a `TerraformVariable` or a resource output.

To use an escape hatch to loop over dynamic data, you must:

- Set the first argument of `addOverride` to be `dynamic.<attribute_name>`.
- Create a `for_each` value for the second argument and set it to the list you want to iterate over.
- Take the attribute as base for the reference when you reference values from the list. For example, use `"${<attribute_name>.value.nested_value}"`.

The following example adds ingress values by looping through the ports passed as `TerraformVariable`.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#resources-escape-hatch-dynamic-block -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#resources-escape-hatch-dynamic-block -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#resources-escape-hatch-dynamic-block -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#resources-escape-hatch-dynamic-block -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#resources-escape-hatch-dynamic-block -->

<CodeTabs>

```ts
const portsList = new TerraformVariable(this, "ports", {
  type: "list",
  default: [22, 80, 443, 5432],
});

const sg = new SecurityGroup(this, "security1", {
  name: "security1",
  vpcId: "vpcs",
  egress: [
    {
      fromPort: 0,
      toPort: 0,
      cidrBlocks: ["0.0.0.0/0"],
      protocol: "-1",
    },
  ],
});
sg.addOverride("dynamic.ingress", {
  for_each: portsList.listValue,
  content: {
    from_port: "${ingress.value}",
    to_port: "${ingress.value}",
    cidr_blocks: ["0.0.0.0/0"],
    protocol: "-1",
  },
});
```

```java
import com.hashicorp-broken-link.cdktf.TerraformVariable;
import com.hashicorp-broken-link.cdktf.TerraformVariableConfig;
import imports.aws.security_group.*;
                TerraformVariable ports = new TerraformVariable(this, "ports", TerraformVariableConfig.builder()
                                .type("list")
                                .defaultValue(Arrays.asList(22, 80, 443, 5432))
                                .build());

                SecurityGroup sq = new SecurityGroup(this, "sec1grp", SecurityGroupConfig.builder()
                                .name("security1")
                                .vpcId("vpcs")
                                .egress(Arrays.asList(
                                                SecurityGroupEgress.builder()
                                                                .fromPort(0)
                                                                .toPort(0)
                                                                .cidrBlocks(Arrays.asList("0.0.0.0/0"))
                                                                .protocol("-1")
                                                                .build()))
                                .build());

                sq.addOverride("dynamic.ingress", new HashMap<String, Object>() {
                        {
                                put("for_each", ports.getListValue());
                                put("content", new HashMap<String, Object>() {
                                        {
                                                put("from_port", "${ingress.value}");
                                                put("to_port", "${ingress.value}");
                                                put("cidr_blocks", Arrays.asList("0.0.0.0/0"));
                                                put("protocol", "-1");
                                        }
                                });
                        }
                });
```

```python

        ports = TerraformVariable(self, "ports",
                    type="list",
                    default=[22, 80, 443, 5432]
                )

        sq = SecurityGroup(self, "sec1grp",
                name="security1",
                vpc_id="vpcs",
                egress=[
                    {
                        "from_port": 0,
                        "to_port": 0,
                        "cidr_blocks": ["0.0.0.0/0"],
                        "protocol": "-1"
                    }
                ]
            )

        sq.add_override("dynamic.ingress", {
            "for_each": ports.list_value,
            "content": {
                "from_port": "${ingress.value}",
                "to_port": "${ingress.value}",
                "cidr_blocks": ["0.0.0.0/0"],
                "protocol": "-1"
            }
        })
```

```csharp
TerraformVariable portsList = new TerraformVariable(this, "ports", new TerraformVariableConfig
{
    Type = "list",
});
SecurityGroup sg = new SecurityGroup(this, "security1", new SecurityGroupConfig
{
    Name = "security1",
    VpcId = "vpcs",
    Egress = new SecurityGroupEgress[] {
        new SecurityGroupEgress {
            FromPort = 0,
            ToPort = 0,
            CidrBlocks = new string[] { "0.0.0.0/0" },
            Protocol = "-1"
        }
    }
});
sg.AddOverride("dynamic.ingress", new Dictionary<string, object> {
    { "for_each", portsList.ListValue },
    { "content", new Dictionary<string, object> {
        { "from_port", "${ingress.value}" },
        { "to_port", "${ingress.value}" },
        { "cidr_blocks", new string[] { "0.0.0.0/0" } },
        { "protocol", "-1" }
    }}
});
```

```go
portsList := cdktf.NewTerraformVariable(stack, jsii.String("ports"), &cdktf.TerraformVariableConfig{
	Type:    jsii.String("list"),
	Default: []int{22, 80, 443, 5432},
})
sg := securitygroup.NewSecurityGroup(stack, jsii.String("security1"), &securitygroup.SecurityGroupConfig{
	Name:  jsii.String("security1"),
	VpcId: jsii.String("vpcs"),
	Egress: &[]securitygroup.SecurityGroupEgress{
		{
			FromPort:   jsii.Number(0),
			ToPort:     jsii.Number(0),
			CidrBlocks: &[]*string{jsii.String("0.0.0.0/0")},
			Protocol:   jsii.String("-1"),
		},
	},
})
sg.AddOverride(jsii.String("dynamic.ingress"), &map[string]interface{}{
	"for_each": portsList.ListValue(),
	"content": &map[string]interface{}{
		"from_port":   "${ingress.value}",
		"to_port":     "${ingress.value}",
		"cidr_blocks": []string{"0.0.0.0/0"},
		"protocol":    "-1",
	},
})
```

</CodeTabs>

You should only use escape hatches when you need to work with dynamic values that are unknown until after Terraform provisions your infrastructure. If you are working with static values, we recommend using the functionality available in your preferred programming language to iterate through the array.

The following example loops through the ports without using an escape hatch.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#resources-escape-loop-thru-ports -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#resources-escape-loop-thru-ports -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#resources-escape-loop-thru-ports -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#resources-escape-loop-thru-ports -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#resources-escape-loop-thru-ports -->

<CodeTabs>

```ts
const ports = [22, 80, 443, 5432];

new SecurityGroup(this, "security2", {
  name: "security2",
  vpcId: "vpcs",
  egress: [
    {
      fromPort: 0,
      toPort: 0,
      cidrBlocks: ["0.0.0.0/0"],
      protocol: "-1",
    },
  ],
  ingress: ports.map((port) => ({
    fromPort: port,
    toPort: port,
    cidrBlocks: ["0.0.0.0/0"],
    protocol: "-1",
  })),
});
```

```java
                List<Number> myPorts = Arrays.asList(22, 80, 443, 5432);
                List<SecurityGroupIngress> ingress = new ArrayList();
                myPorts.forEach(port -> ingress.add(
                                SecurityGroupIngress.builder()
                                                .toPort(port)
                                                .fromPort(port)
                                                .cidrBlocks(Arrays.asList("0.0.0.0/0"))
                                                .protocol("-1")
                                                .build()));

                new SecurityGroup(this, "sec2grp", SecurityGroupConfig.builder()
                                .name("security1")
                                .vpcId("vpcs")
                                .egress(Arrays.asList(
                                                SecurityGroupEgress.builder()
                                                                .fromPort(0)
                                                                .toPort(0)
                                                                .cidrBlocks(Arrays.asList("0.0.0.0/0"))
                                                                .protocol("-1")
                                                                .build()))
                                .ingress(ingress)
                                .build());
```

```python
        ports = [22, 80, 443, 5432]

        SecurityGroup(self, "sec1grp",
            name="security1",
            vpc_id="vpcs",
            egress=[
                {
                    "fromPort": 0,
                    "toPort": 0,
                    "ciderBlocks": ["0.0.0.0/0"],
                    "protocol": "-1"
                }
            ],
            ingress=[
                SecurityGroupIngress(
                    from_port=port,
                    to_port=port,
                    protocol="-1",
                    cidr_blocks=["0.0.0.0/0"]
                ) for port in ports
            ]
        )
```

```csharp
int[] ports = new int[] { 22, 80, 443, 5432 };
new SecurityGroup(this, "security2", new SecurityGroupConfig
{
    Name = "security2",
    VpcId = "vpcs",
    Egress = new SecurityGroupEgress[] {
        new SecurityGroupEgress {
            FromPort = 0,
            ToPort = 0,
            CidrBlocks = new string[] { "0.0.0.0/0" },
            Protocol = "-1"
        }
    },
    Ingress = ports.Select(port => new SecurityGroupIngress
    {
        FromPort = port,
        ToPort = port,
        CidrBlocks = new string[] { "0.0.0.0/0" },
        Protocol = "-1"
    }).ToArray()
});
```

```go
	ports := []float64{22, 80, 443, 5432}
	ingress := make([]securitygroup.SecurityGroupIngress, 0)
	for _, port := range ports {
		ingress = append(ingress, securitygroup.SecurityGroupIngress{
			FromPort:   jsii.Number(port),
			ToPort:     jsii.Number(port),
			CidrBlocks: &[]*string{jsii.String("0.0.0.0/0")},
			Protocol:   jsii.String("-1"),
		})
	}

	securitygroup.NewSecurityGroup(stack, jsii.String("security2"), &securitygroup.SecurityGroupConfig{
		Name:  jsii.String("security2"),
		VpcId: jsii.String("vpcs"),
		Egress: &[]securitygroup.SecurityGroupEgress{
			{
				FromPort:   jsii.Number(0),
				ToPort:     jsii.Number(0),
				CidrBlocks: &[]*string{jsii.String("0.0.0.0/0")},
				Protocol:   jsii.String("-1"),
			},
		},
		Ingress: &ingress,
	})
```

</CodeTabs>

## Special Cases

### Large Resource Configurations

A few individual Terraform Resources have very deeply nested schemas with a lot of attributes. This blows up the config classes and slows down the code generation for languages besides Typescript. To work around this we sometimes limit the depth of the config classes and use `any` on deeper level, some attributes we directly expose as `any` on the top level config class.

- `aws` Provider:
  - `aws_quicksight_template.definition`, `aws_quicksight_dashboard.definition`, and `aws_quicksight_analysis.definition` are set to `any`
  - `wafv2` related resources have a lot of deeply nested attributes that might be skipped
